# Drone

./: .gitmodules  README.md  Simulate.py  drone_takeoff_forward_land.py  package.xml  setup.py
PSO_Obstacle_avoidance-Pfe_ISIMM/Code-Python/: CreateModel.py  CreateRandomSolution.py  MyCost.py  PlotSolution.py  SPSO_Main.py  Spherical_To_Cart.py
Scripts/: Initiate.py  Mission.py  Missioncorect.py  Missionincomplete.py  RML_cv.py  RML_cv_hist.py  RML_yolo.py  RML_yolo_hist.py  config.rviz
drone/: keybord_teleop.py
launch/: display.launch  display.launch.py  gazebo.launch  gazebo.launch.py  gz.launch.py
meshes/: Link_1.STL  Link_2.STL  Link_3.STL  Link_4.STL  Link_5.STL  base_link.STL
urdf/: Drone assembly.STEP.csv  Drone_assembly.urdf
